--- a/src/app/app-layout/post/post-detail/post-detail.component.html
+++ b/src/app/app-layout/post/post-detail/post-detail.component.html
@@ -46,7 +46,7 @@
             <input type="email" class="form-control" id="reply-email" name="reply-email" required placeholder="Email *">
           </div>
         </div>
-        <button type="submit" class="btn btn-outline-primary">
+        <button type="submit" class="btn btn-outline-primary mb-2">
           <span>ĐĂNG BÌNH LUẬN</span>
           <i class="icon-long-arrow-right"></i>
         </button>
