--- a/src/app/app-layout/login/login-page/login-page.component.html
+++ b/src/app/app-layout/login/login-page/login-page.component.html
@@ -19,21 +19,10 @@
 
           <button type="button" class="btn-login" (click)="loginPage()">Sign In</button>
       </form>
-
-      <div class="divider">
-          <span>or</span>
-      </div>
-
+      <hr class="divider">
+      <p class="google-text">Đăng nhập hoặc đăng ký mới bằng tài khoản Google</p>
       <div id="googleID" class="google-login">
           <!-- Google login button will be rendered here -->
-      </div>
-
-      <div class="forgot-password">
-          <a href="#">Forgot Password?</a>
-      </div>
-
-      <div class="register-link">
-          Don't have an account? <a routerLink="/register">Sign up</a>
       </div>
   </div>
 </body>
