--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -11,7 +11,7 @@
 
         <div class="row g-4">
             <!-- Service Card 1 -->
-            <div class="col-lg-4 col-md-6">
+            <div class="col-lg-4 col-md-6 mb-3">
                 <div class="service-card">
                     <div class="icon-box bg-primary rounded-circle">
                         <i class="fas fa-passport text-white fa-2x"></i>
