--- a/src/app/app-layout/app-layout.component.html
+++ b/src/app/app-layout/app-layout.component.html
@@ -1,6 +1,7 @@
 <app-header></app-header>
         <app-page-heading></app-page-heading>
         <router-outlet></router-outlet>
+        <app-message-button></app-message-button>
 <app-footer></app-footer>
 <ngx-loading [show]="show"   [config]="{ fullScreenBackdrop: true }"></ngx-loading>
 <app-auto-login class="d-none"></app-auto-login>
